 V1: Fix welcome string from "SharePoint 2007 farm" to "SharePoint farm"

2013-03-20, Perry
 New ActivationCommand method ActivateOneFeature
  which handles compatibility option when activating features on SP2013

2013-07-12, Perry
 NB: API call in ActivateOneFeature still doesn't work for 15
 Fix FeatureActivator.ActivateOneFeature to take log param
 InstallProcessControl.LogMessageToString: Include inner exceptions in log
 LogManager.Error: fix to not drop exception
 Deploy solutions with 14/15 compatibility if specified: new CompatibilityDeployer.cs
 Fix compilation on SP2007
 Implement all string CompatibilityLevels currently documented for Install-SPSolution
  (add AllVersions, Old, OldVersion, New, and NewVersion)
 Release 1.2.8.0

2015-09-08, Perry
 Fix InstallConfiguration.FeatureId to return empty list instead of null
  when no features specified
 Release 1.2.10.0

2016-02-03, Perry
 Improve getting web application list; protected access to Solution.DeployedWebApplications
  and improve reporting when falling back to enumerating all webapps

2016-02-04, Perry
 Release 1.2.12.0

2016-02-10, Perry
 Display version numbers in upgrade form title

2016-02-10, Perry
 Release 1.2.14.0

2016-03-11, Perry
 InstallerForm_Load: Don't try to load "None" logo image
 Test that SPFarm.Local is accessible early, & bail with msgbox if not
 Add solution version info above system checks
 Move solution version info into panel at bottom so always visible
 Add checkboxes for user to choose deactivate & activate
   in Upgrade/Remove and in Repair/Remove cases
 Show location summary info in repair & upgrade forms

2016-03-14, Perry
 Fix Microsoft.SharePoint.dll reference to point to installed & get rid of copy
 Delete unused folders BuildProcessTemplates & "Development V2"

2016-03-20, Perry
 Add distribution readme.html to Development source
 Add howto_release.txt to Development source
 Delete obsolete file Development/SharePoint Solution Installer.vssscc