@@ -1,2 +1,1 @@
-/SharePoint Solution Installer.suo
 /SharePoint Solution Installer 2013.v11.suo
