@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
     <add key="BannerImage" value="Default"/>
@@ -36,4 +36,4 @@
       <!-- CompatibilityLevel: For SharePoint 2013, see docs for Install-SPSolution -->
     <add key="CompatibilityLevel" value="15"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
