@@ -75,3 +75,6 @@ SharePoint Solution Installer Development V1 ChangeLog
  Add distribution readme.html to Development source
  Add howto_release.txt to Development source
  Delete obsolete file Development/SharePoint Solution Installer.vssscc
+ Delete obsolete SP2007/SP2010 project & solution files
+  SharePoint Solution Installer.sln & CodePlex.SharePointInstaller.csproj
+ Fix SP2013 solution (.NET 4.5, and add LocationDisplay.cs)
